wp-content/themes/attitude_child_exsv/style-child.css
/* ... */
/* All Mobile Portrait size smaller than 768 (devices and browsers) */
@media only screen and (max-width: 767px) {
    .hgroup-right {
        margin-top: 10px;
    }
/* Slogan */
	.slogan-wrap .slogan {
		width: 100%;
	}
	.bns-featured-category .post {
    width: 95%;
	}
    #wpp-2 .wpp-list li {
    width: 95%;
    }
	.one-fourth {
    margin: 0 0 0 2.5%;
    width: 95%;
	}
	.entry-meta span.comments {
    display: none;
	}
	.entry-meta span.category {
    display: none;
	}
    input.s {
        width: 235px;
	}
/* Suchergebnisse */
    .suchergebnis {
    margin: 0 0 40px;
    }
/* Über uns Seite */
    .ueberuns-avatar-g {
    height: 200px;
    width: 200px;
    }
}

/* All Mobile landscape size and All Mini Tablet Portrait size smaller than standard 768 and larger than 480 (devices and browsers) */
@media only screen and (min-width: 480px) and (max-width: 767px) {
    .mittelspalte {
    width: 420px;
    }
/* Slogan */
	.slogan-wrap .slogan {
		width: 100%;
	}
	.bns-featured-category .post {
    width: 95%;
	}
    #wpp-2 .wpp-list li {
    width: 95%;
    }
	.one-fourth {
    margin: 0 0 0 2.5%;
    width: 95%;
	}

	.entry-meta span.by-author {
    display: inline;
	}
    input.s {
		width: 375px;
	}
/* Pinstyle für Tags und Kategorien */
    body.category div#content, body.tag div#content {
    -moz-column-count: 2;
    -webkit-column-count: 2;
    column-count: 2;
    }
}

/* All Mobile size smaller than standard 320 (devices and browsers) */
@media only screen and (max-width: 479px) {
    #site-logo {
        margin-top:10px;
    }
    .mittelspalte {
    width: 280px;
    }
/* Slogan */
	.slogan-wrap .slogan {
		width: 100%;
	}
	.bns-featured-category .post {
    width: 95%;
	}
    #wpp-2 .wpp-list li {
    width: 95%;
    }
	.one-fourth {
    margin: 0 0 0 2.5%;
    width: 95%;
	}
/* Pinstyle für Tags und Kategorien */
    body.category div#content, body.tag div#content {
    -moz-column-count: 1;
    -webkit-column-count: 1;
    column-count: 1;
    }
    body.category article, body.tag article {
    margin: 0 0 5px 20px;
    }
}

